# opentel-test

./: README.md  docker-compose.dev.yml  go.mod  go.sum  start-jaeger.sh
SidekickNameServer/: Dockerfile  index.ts  package-lock.json  package.json  tracing.ts
client/: .gitignore  main.go
nameserver/: .gitignore  Cargo.toml  Dockerfile  build.rs
nameserver/proto/: README.md  name.pb.go  name.proto  name_grpc.pb.go
nameserver/src/: client.rs  main.rs  name.rs
