[package]
name = "nameserver"
version = "0.1.0"
authors = ["robjsliwa <robjsliwa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6.1"
tonic = {version="0.3",features = ["tls"]}
tokio = {version="0.2",features = ["stream", "macros"]}
futures = "0.3"

[build-dependencies]
tonic-build = "0.3"

[[bin]]
name = "nameserver"
path = "src/main.rs"

[[bin]]
name = "testclient"
path = "src/client.rs"